--- a/table.html
+++ b/table.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <div class="page">
+      <div class="table_responsive">
         <table>
             <tr class="color-7">
                 <th></th>
@@ -28,11 +29,11 @@
              </tr>
              <tr>
                 <td  class="color-7">10.00</td>
-                <td></td>
+                <td class="color-8"></td>
                 <td class="color-1">CS335[Lab]</td>
                 <td class="color-3">MD352[Kairos]</td>
-                <td></td>
-                <td></td>          
+                <td class="color-8"></td>
+                <td class="color-8"></td>          
              </tr>
              <tr>
                 <td  class="color-7">11.00</td>
@@ -44,12 +45,12 @@
              </tr>
              <tr>
                 <td  class="color-7" >12.00</td>
-                <td></td>
+                <td class="color-8"></td>
                 <td class="color-5">MD352[CS2</td>
                 <td class="color-6">MD354[Kairos]</td>
-                <td></td>
-                <td></td>          
-             </tr>
+                <td class="color-8"></td>
+                <td class="color-8"></td>          
+             </tr> 
              <tr>
                 <td  class="color-7">13.00</td>
                 <td></td>
@@ -60,11 +61,11 @@
              </tr>
              <tr>
                 <td  class="color-7">14.00</td>
-                <td></td>
-                <td></td>
+                <td class="color-8"></td>
+                <td class="color-8"></td>
                 <td class="color-2">SC426[CS2]</td>
                 <td class="color-4">MD402[Lab]</td>
-                <td></td>          
+                <td class="color-8"></td>          
              </tr>
              <tr>
                 <td  class="color-7">15.00</td>
@@ -76,11 +77,11 @@
              </tr>
              <tr>
                 <td  class="color-7">16.00</td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td class="color-4">MD402[Lab]</td>
-                <td></td>          
+                <td class="color-8"></td>
+                <td class="color-8"></td>
+                <td class="color-8"></td>
+                <td  class="color-4">MD402[Lab]</td>
+                <td class="color-8"></td>          
              </tr>
              <tr >
                 <td  class="color-7">17.00</td>
@@ -90,7 +91,8 @@
                 <td></td>
                 <td></td>          
              </tr>
-        </table>
+            </table>
+    </div>
     </div>
 </body>
 </html>
